change advertise to adnegah

--- a/pin/templates/pin2/tabliq/_300x250.html
+++ b/pin/templates/pin2/tabliq/_300x250.html
@@ -1,10 +1,11 @@
 <div class="mato10 mabo10 tab_300 tabliq" style="border-radius:8px;overflow:hidden;height:250px;">
+<script type="text/javascript">adnegah.fix(300, 250, "b");</script>
 
+{% comment %}
 <!-- saba -->
 <script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69349,69348,69347,69346&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
     
 
-{% comment %}
 <!-- clickyab -->
 <script type="text/javascript">
     var clickyab_ad = clickyab_ad || [];
