--- a/pin/templates/pin2/tabliq/_468x60.html
+++ b/pin/templates/pin2/tabliq/_468x60.html
@@ -1,10 +1,13 @@
 <div class="box tabliq">
 <div class="box" style="text-align: center; padding-top: 6px;">
-    <script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69345,69344,69343,69342&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
-    
+	<script type="text/javascript">adnegah.fix(468, 60, "c");</script>
+
 </div>
 
 {% comment %}
+    <script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69345,69344,69343,69342&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
+
+
 <script type="text/javascript">
     var clickyab_ad = clickyab_ad || [];
     clickyab_ad['id'] = 6801448283017;
