--- a/pin/templates/pin2/tabliq/_728x90.html
+++ b/pin/templates/pin2/tabliq/_728x90.html
@@ -1,11 +1,1 @@
-<script type="text/javascript">
-	var clickyab_ad = clickyab_ad || [];
-	clickyab_ad['id'] = 6801448283017 ;
-	clickyab_ad['domain'] = 'wisgoon.com';
-	clickyab_ad['slot'] = 64269169387;
-	clickyab_ad['width'] = 728;
-	clickyab_ad['height'] = 90;
-	clickyab_ad['responsive'] = 'true' ;
-	clickyab_ad['effect'] = "";
-</script>
-<script type="text/javascript" src="//a.clickyab.com/show.js"></script>
+<script type="text/javascript">adnegah.fix(728, 90, "a");</script>
