--- a/pin/templates/pin2/all_header.html
+++ b/pin/templates/pin2/all_header.html
@@ -63,5 +63,5 @@
 	var mobile_agent = false;
 {% endif %}
 </script>
-
+<script src="http://s.adnegah.net/engine.js"type="text/javascript"></script>
 {% block css %}{% endblock css %}
