--- a/pin/templates/pin2/flat.base.box.html
+++ b/pin/templates/pin2/flat.base.box.html
@@ -25,7 +25,7 @@
 
 	{% if DISPLAY_AD %}
 	<div class="tabliq-block" style="text-align:center">
-		{% include "base/tabliq.html" %}
+		{% include "pin2/tabliq/_728x90.html" %}
 	</div>
 	{% endif %}
 	
