--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -36,7 +36,7 @@
             <div class="col-md-9 col-sm-12 col-xs-12">
             {% if DISPLAY_AD %}
                 <div class="mato10 mabo10 tab_300 tabliq" style="border-radius:8px;overflow:hidden;height:100px;">
-                    {% include "base/tabliq.html" %}
+                    {% include "pin2/tabliq/_728x90_1.html" %}
                 </div>
             {%endif%}
             </div>
