change banner adnegah

--- a/pin/templates/pin2/tabliq/_728x90.html
+++ b/pin/templates/pin2/tabliq/_728x90.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">adnegah.fix(728, 90, "a");</script>
+<script type="text/javascript">adnegah.fix(728, 90, "o");</script>
