--- a/pin/templates/pin2/tabliq/_468x60.html
+++ b/pin/templates/pin2/tabliq/_468x60.html
@@ -1,10 +1,22 @@
 <div class="box tabliq">
 <div class="box" style="text-align: center; padding-top: 6px;">
-	<script type="text/javascript">adnegah.fix(468, 60, "c");</script>
 
+	<script type="text/javascript">
+		var clickyab_ad = clickyab_ad || []; 
+		clickyab_ad['id'] = 1681494155939 ; 
+		clickyab_ad['domain'] = 'wisgoon.com'; 
+		clickyab_ad['slot'] = 94171999169; 
+		clickyab_ad['width'] = 468; 
+		clickyab_ad['height'] = 60; 
+		clickyab_ad['responsive'] = 'true' ; 
+		clickyab_ad['effect'] = "";
+	</script> 
+	<script type="text/javascript" src="//a.clickyab.com/show.js"></script>
+</div>
 </div>
 
 {% comment %}
+	<script type="text/javascript">adnegah.fix(468, 60, "c");</script>
     <script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69345,69344,69343,69342&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
 
 
@@ -21,5 +33,4 @@
 
 
 
-</div>
 
