--- a/pin/templates/pin2/tabliq/_300x250.html
+++ b/pin/templates/pin2/tabliq/_300x250.html
@@ -1,22 +1,24 @@
 <div class="mato10 mabo10 tab_300 tabliq" style="border-radius:8px;overflow:hidden;height:250px;">
-<script type="text/javascript">adnegah.fix(300, 250, "b");</script>
 
 {% comment %}
+<!-- adnegah -->
+<script type="text/javascript">adnegah.fix(300, 250, "b");</script>
 <!-- saba -->
 <script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69349,69348,69347,69346&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
-    
+{% endcomment %}
+
 
 <!-- clickyab -->
 <script type="text/javascript">
-    var clickyab_ad = clickyab_ad || [];
-    clickyab_ad['id'] = 6801448283017;
-    clickyab_ad['domain'] = 'wisgoon.com';
-    clickyab_ad['slot'] = 92274877656;
-    clickyab_ad['width'] = 300;
-    clickyab_ad['height'] = 250;
-</script>
-<script type="text/javascript" src="http://a.clickyab.com/show.js"></script>
-{% endcomment %}
-
+	var clickyab_ad = clickyab_ad || []; 
+	clickyab_ad['id'] = 1681494155939 ; 
+	clickyab_ad['domain'] = 'wisgoon.com'; 
+	clickyab_ad['slot'] = 2097172915; 
+	clickyab_ad['width'] = 300; 
+	clickyab_ad['height'] = 250; 
+	clickyab_ad['responsive'] = 'true' ; 
+	clickyab_ad['effect'] = "";
+</script> 
+<script type="text/javascript" src="//a.clickyab.com/show.js"></script>
 
 </div>
