--- a/pin/templates/pin2/tabliq/_728x90.html
+++ b/pin/templates/pin2/tabliq/_728x90.html
@@ -1,1 +1,16 @@
-<script type="text/javascript">adnegah.fix(728, 90, "o");</script>
+{% comment %}
+	<script type="text/javascript">adnegah.fix(728, 90, "o");</script>
+{% endcomment %}
+
+
+<script type="text/javascript">
+	var clickyab_ad = clickyab_ad || []; 
+	clickyab_ad['id'] = 1681494155939 ; 
+	clickyab_ad['domain'] = 'wisgoon.com'; 
+	clickyab_ad['slot'] = 67054460779; 
+	clickyab_ad['width'] = 728; 
+	clickyab_ad['height'] = 90; 
+	clickyab_ad['responsive'] = 'true' ; 
+	clickyab_ad['effect'] = "";
+</script> 
+<script type="text/javascript" src="//a.clickyab.com/show.js"></script>
